[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bundleutilspkg"
dynamic = ["version"]
description = "Bundleutils package"
authors = [{ name = "Steve Boardwell", email = "steve.boardwell@gmail.com" }]
dependencies = [
    "click",
    "glob2",
    "ruamel.yaml",
    "ruamel.yaml.clib",
    "deepdiff",
    "requests",
    "jsonpatch",
    "packaging"
]

[project.optional-dependencies]
dev = ["pytest", "pyinstaller"]

[project.scripts]
bundleutils = "scripts.bundleutils:bundleutils"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
defaults = ["configs/**/*", "configs/*"]

[tool.setuptools.dynamic]
version = { attr = "scripts._version.__version__" }
